# qs

./: .gitignore  LICENSE  README  build_and_upload_live.sh  setup.cfg  urls.txt
src/: qs.py
src/qs/: __main__.py  qs.py
