[metadata]
name = queryswap
version = 0.0.4.3
author = darkmage
author_email = darkmagex6+github@bugcrowdninja.com
description = A url query string swapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikedesu/qs
project_urls =
    Bug Tracker = https://github.com/mikedesu/qs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
